--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "phaseR"]
+	path = phaseR
+	url = https://github.com/mjg211/phaser
+	shallow = true
+	registered = true
